--- a/product/ld26.html
+++ b/product/ld26.html
@@ -5,7 +5,9 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>        
         <!--- <script src="getURLParam.js" type="text/javascript"></script> ---> 		
         <script src="crafty.js" type="text/javascript"></script> 		
+        <script src="level1.js" type="text/javascript"></script>		
         <script src="ld26.js" type="text/javascript"></script>
+		
 		
         <style>
             body {
