--- a/product/ld26.html
+++ b/product/ld26.html
@@ -6,6 +6,10 @@
         <!--- <script src="getURLParam.js" type="text/javascript"></script> ---> 		
         <script src="crafty.js" type="text/javascript"></script> 		
         <script src="level_brickPen.js" type="text/javascript"></script>		
+        <script src="level_straightWalk.js" type="text/javascript"></script>		
+        <script src="level_steelDoors.js" type="text/javascript"></script>		
+		
+		
         <script src="ld26.js" type="text/javascript"></script>
 		
 		
