--- a/product/ld26.html
+++ b/product/ld26.html
@@ -8,6 +8,8 @@
         <script src="level_brickPen.js" type="text/javascript"></script>		
         <script src="level_straightWalk.js" type="text/javascript"></script>		
         <script src="level_steelDoors.js" type="text/javascript"></script>		
+        <script src="level_steelDoors2.js" type="text/javascript"></script>		
+		
 		
 		
         <script src="ld26.js" type="text/javascript"></script>
