--- a/product/ld26.html
+++ b/product/ld26.html
@@ -5,6 +5,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>        
         <!--- <script src="getURLParam.js" type="text/javascript"></script> ---> 		
         <script src="crafty.js" type="text/javascript"></script> 		
+        <script src="critter.js" type="text/javascript"></script> 						
         <script src="level_brickPen.js" type="text/javascript"></script>		
         <script src="level_straightWalk.js" type="text/javascript"></script>		
         <script src="level_steelDoors.js" type="text/javascript"></script>		
