--- a/product/ld26.html
+++ b/product/ld26.html
@@ -10,6 +10,7 @@
         <script src="level_straightWalk.js" type="text/javascript"></script>		
         <script src="level_steelDoors.js" type="text/javascript"></script>		
         <script src="level_steelDoors2.js" type="text/javascript"></script>		
+        <script src="level_thornValley.js" type="text/javascript"></script>		
 		
 		
 		
