--- a/product/ld26.html
+++ b/product/ld26.html
@@ -12,6 +12,7 @@
         <script src="level_steelDoors2.js" type="text/javascript"></script>		
         <script src="level_thornValley.js" type="text/javascript"></script>		
         <script src="level_skeletonHurtles.js" type="text/javascript"></script>		
+        <script src="level_pickleFlight.js" type="text/javascript"></script>		
 		
 		
 		
