--- a/product/ld26.html
+++ b/product/ld26.html
@@ -3,7 +3,7 @@
     <head> 
         <title>Ludum Dare #26</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>        
-        <!--- <script src="getURLParam.js" type="text/javascript"></script> ---> 		
+        <script src="getURLParam.js" type="text/javascript"></script> 
         <script src="crafty.js" type="text/javascript"></script> 		
         <script src="critter.js" type="text/javascript"></script> 						
         <script src="level_brickPen.js" type="text/javascript"></script>		
@@ -13,6 +13,8 @@
         <script src="level_thornValley.js" type="text/javascript"></script>		
         <script src="level_skeletonHurdles.js" type="text/javascript"></script>		
         <script src="level_pickleFlight.js" type="text/javascript"></script>		
+        <script src="level_pickleEasy.js" type="text/javascript"></script>		
+		
 		
 		
 		
@@ -21,7 +23,7 @@
 		
         <style>
             body {
-                background-color: white;
+                background-color: #111144;
             }
             
             .container {
